# Auto-Claude

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD-per-spec-worktree-architecture.md  README.md  card_data.txt  package-lock.json  package.json
apps/backend/: .env.example  .gitignore  __init__.py  phase_config.py  pyproject.toml  recovery.py  requirements.txt
apps/backend/agents/: coder.py  planner.py  session.py
apps/backend/agents/tools_pkg/: models.py
apps/backend/analysis/: __init__.py
apps/backend/analysis/analyzers/: framework_analyzer.py  project_analyzer_module.py  service_analyzer.py
apps/backend/cli/: batch_commands.py  build_commands.py  workspace_commands.py
apps/backend/core/: auth.py  client.py  error_utils.py  fast_mode.py  gh_executable.py  git_executable.py  glab_executable.py  progress.py  sentry.py  simple_client.py  worktree.py
apps/backend/core/platform/: __init__.py
apps/backend/core/workspace/: __init__.py  dependency_strategy.py  models.py  setup.py
apps/backend/ideation/: config.py  generator.py  runner.py
apps/backend/integrations/graphiti/: config.py  memory.py  run_graphiti_memory_test.py  run_ollama_embedding_test.py
apps/backend/memory/: codebase_map.py  graphiti_helpers.py  patterns.py
apps/backend/prompts/: coder.md  qa_reviewer.md  spec_critic.md  spec_researcher.md  spec_writer.md
apps/backend/prompts/github/: pr_finding_validator.md  pr_followup_orchestrator.md
apps/backend/prompts/mcp_tools/: electron_validation.md  puppeteer_browser.md
apps/backend/prompts_pkg/: prompts.py
apps/backend/qa/: fixer.py  loop.py  reviewer.py
apps/backend/runners/: ideation_runner.py  insights_runner.py  roadmap_runner.py  spec_runner.py
apps/backend/runners/github/: models.py  orchestrator.py  rate_limiter.py  runner.py
apps/backend/runners/gitlab/: models.py  runner.py
apps/backend/runners/roadmap/: competitor_analyzer.py  graph_integration.py  phases.py
apps/backend/services/: recovery.py
apps/backend/spec/phases/: spec_phases.py
apps/backend/spec/pipeline/: agent_runner.py  models.py  orchestrator.py
(+655 files in other folders)
